--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
       <main>
         <div class="container">
           <div class="row">
-            <div class="col-md-7 left-side">
+            <div class="col-md-7">
+              <div class="left-side">
               <div class="row">
                 <div class="col-md-12">
                   <h2>Praesent mattis condimentum</h2>
@@ -100,70 +101,81 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-6 tristique">
-                  <h2>Tristique eleifend</h2>
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus deserunt dolorem, laborum ducimus nisi aliquam voluptatem explicabo cumque nihil ad ea, reiciendis sequi! Minus ipsum.</p>
-                  <button type="button" class="btn btn-primary">20012.10.25</button>
-                  <h3>Etiam posuere augue</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, nihil?</p>
-                  <hr>
-                  <button type="button" class="btn btn-primary">20012.10.25</button>
-                  <h3>Etiam posuere augue</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, nihil?</p>
+                <div class="col-md-6 ">
+                  <div class="tristique">
+                    <h2>Tristique eleifend</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus deserunt dolorem, laborum ducimus nisi aliquam voluptatem explicabo cumque nihil ad ea, reiciendis sequi! Minus ipsum.</p>
+                    <button type="button" class="btn btn-primary">20012.10.25</button>
+                    <h3>Etiam posuere augue</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, nihil?</p>
+                    <hr>
+                    <button type="button" class="btn btn-primary">20012.10.25</button>
+                    <h3>Etiam posuere augue</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, nihil?</p>
                 </div>
-                <div class="col-md-6 donec">
-                  <h2>Donec dictum metus</h2>
-                  <h3>Mauris vulputate dolor sit amet</h3>
-                  <p>&bull; Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ducimus, voluptas molestiae quisquam.</p>
-                  <hr>
-                  <h3>Fusce ultrices fringilla metus</h3>
-                  <p>&bull; Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ducimus, voluptas molestiae quisquam.</p>
-                  <hr>
-                  <h3>Fusce ultrices fringilla metus</h3>
-                  <p>&bull; Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ducimus, voluptas molestiae quisquam.</p>
                 </div>
+                <div class="col-md-6 ">
+                  <div class="donec">
+                    <h2>Donec dictum metus</h2>
+                    <h3>Mauris vulputate dolor sit amet</h3>
+                    <p>&bull; Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ducimus, voluptas molestiae quisquam.</p>
+                    <hr>
+                    <h3>Fusce ultrices fringilla metus</h3>
+                    <p>&bull; Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ducimus, voluptas molestiae quisquam.</p>
+                    <hr>
+                    <h3>Fusce ultrices fringilla metus</h3>
+                    <p>&bull; Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ducimus, voluptas molestiae quisquam.</p>
+                </div>
+              </div>
+              </div>
               </div>
             </div>
-            <div class="col-md-5 right-side">
+            <div class="col-md-5 ">
+              <div class="right-side">
               <div class="row">
-                <div class="col-md-6 nulla">
-                  <h2>Nulla eleifend</h2>
-                  <p>&bull; Maecenas lucuts</p>
-                  <hr>
-                  <p>&bull; Lorem, ipsum dolor.</p>
-                  <hr>
-                  <p>&bull; Lorem, ipsum dolor.</p>
-                  <hr>
-                  <p>&bull; Lorem, ipsum dolor.</p>
-                  <hr>
-                  <p>&bull; Lorem, ipsum dolor.</p>
-                  <hr>
-                  <p>&bull; Lorem, ipsum dolor.</p>
-                  <hr>
-                  <p>&bull; Lorem, ipsum dolor.</p>
+                <div class="col-md-6 ">
+                  <div class="nulla">
+                    <h2>Nulla eleifend</h2>
+                    <p>&bull; Maecenas lucuts</p>
+                    <hr>
+                    <p>&bull; Lorem, ipsum dolor.</p>
+                    <hr>
+                    <p>&bull; Lorem, ipsum dolor.</p>
+                    <hr>
+                    <p>&bull; Lorem, ipsum dolor.</p>
+                    <hr>
+                    <p>&bull; Lorem, ipsum dolor.</p>
+                    <hr>
+                    <p>&bull; Lorem, ipsum dolor.</p>
+                    <hr>
+                    <p>&bull; Lorem, ipsum dolor.</p>
+                  </div>
                 </div>
-                <div class="col-md-6 nulla">
-                  <h2>Nulla eleifend</h2>
-                  <p>&bull; Maecenas lucuts</p>
-                  <hr>
-                  <p>&bull; Lorem, ipsum dolor.</p>
-                  <hr>
-                  <p>&bull; Lorem, ipsum dolor.</p>
-                  <hr>
-                  <p>&bull; Lorem, ipsum dolor.</p>
-                  <hr>
-                  <p>&bull; Lorem, ipsum dolor.</p>
-                  <hr>
-                  <p>&bull; Lorem, ipsum dolor.</p>
-                  <hr>
-                  <p>&bull; Lorem, ipsum dolor.</p>
+                <div class="col-md-6 ">
+                  <div class="nulla">
+                    <h2>Nulla eleifend</h2>
+                    <p>&bull; Maecenas lucuts</p>
+                    <hr>
+                    <p>&bull; Lorem, ipsum dolor.</p>
+                    <hr>
+                    <p>&bull; Lorem, ipsum dolor.</p>
+                    <hr>
+                    <p>&bull; Lorem, ipsum dolor.</p>
+                    <hr>
+                    <p>&bull; Lorem, ipsum dolor.</p>
+                    <hr>
+                    <p>&bull; Lorem, ipsum dolor.</p>
+                    <hr>
+                    <p>&bull; Lorem, ipsum dolor.</p>
+                  </div>
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-12 ipsum">
+                <div class="col-md-12 ">
+                  <div class="ipsum">
                   <h2>Ipsum Consequat</h2>
                   <div class="row news">
-                    <div class="col-md-12 clearfix">
+                    <div class="col-md-12 ">
                       <div class="left">
                         <img src="images/pics07.jpg" alt="">
                       </div>
@@ -174,7 +186,7 @@
                   </div>
                   <hr>
                   <div class="row news">
-                    <div class="col-md-12 clearfix">
+                    <div class="col-md-12 ">
                       <div class="left">
                         <img src="images/pics08.jpg" alt="">
                       </div>
@@ -185,7 +197,7 @@
                   </div>
                   <hr>
                   <div class="row news">
-                    <div class="col-md-12 clearfix">
+                    <div class="col-md-12 ">
                       <div class="left">
                         <img src="images/pics09.jpg" alt="">
                       </div>
@@ -196,7 +208,7 @@
                   </div>
                   <hr>
                   <div class="row news">
-                    <div class="col-md-12 clearfix">
+                    <div class="col-md-12 ">
                       <div class="left">
                         <img src="images/pics10.jpg" alt="">
                       </div>
@@ -209,8 +221,10 @@
                   
                   <button>Read More</button>
                 </div>
+                </div>
               </div>
             </div>
+          </div>
           </div>
           <hr>
         </div>
